--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/nahsorad/sort-files.js/issues"
   },
-  "homepage": "https://github.com/nahsorad/sort-files.js#readme"
+  "homepage": "https://github.com/nahsorad/sort-files.js#readme",
+  "dependencies": {
+    "fs": "0.0.1-security",
+    "path": "^0.12.7"
+  }
 }
